src/styles/sass/andromeda/doc-mgt/_styles.scss
.title-dropdown{
  margin-bottom: 0 !important;

  .dropdown{
    margin-bottom: 0 !important;
  }

  .btn{
    padding-left: 0 !important;
  }

}

.action-bar-spacing{
  margin-top: 10px;

  .btn-toolbar .btn{
    float: none;
  }

  .btn-group {
    float: none !important;
    margin-bottom: 2px;
  }
}

.small{
  display: block;
  margin: 6px 0 0;
  opacity: 0.5;

  & + .small{
    margin-top: 0;
  }
}



/* ----------------------------------------
-------------------------------------------
  Search.
-------------------------------------------
---------------------------------------- */
$search-width: 150px;
$search-expanded-width: 400px;

#doc_mgt-search_wrapper{
  position: static;
  display: inline-block;
  width: $search-width;

  #doc_mgt-results_wrapper{
    display: none;
    opacity: 0;
    position: absolute;
    top: 42px;
    right: 10px;
    width: 400px;
    text-align: left;
    z-index: 2;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    transition: all .3s ease;

    &.results_wrapper--open{
      display: block;
      opacity: 1;
    }

    .list-group-item:first-child {
        border-width: 0 1px 1px;
    }
  }

  input {
    display: block;
    position: absolute;
    right: 10px;
    top: 8px;
    width: $search-width;
    height: 34px;
    -webkit-transition: all 0.15s ease;
    -moz-transition: all 0.15s ease;
    transition: all 0.15s ease;
    z-index: 999;

    &:focus{
      width: $search-expanded-width;
    }
  }
}



/* ----------------------------------------
-------------------------------------------
  Actions.
-------------------------------------------
---------------------------------------- */
.doc_mgt-list_header{

  .doc_mgt-list_titles{
    padding: 20px 0 6px;
    margin-left: 0;
    margin-right: 0;
    border-bottom: 2px solid darken($border-color, 6%);
  }

  .doc_mgt-list_actions{
    display: none;
    padding: 10px 0;
  }
}



/* ----------------------------------------
-------------------------------------------
  FOLDER STRUCTURE LIST.
-------------------------------------------
---------------------------------------- */
.doc_mgt-list{

  .list-group-item{
    border-color: $border-color;
    border-width: 1px 0 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    cursor: default;

    &:hover{
      background-color: $row-hover;
    }

    p{
      margin: 0;
    }

    &.selected,
    &.selected:hover,
    &.selected:focus{
      color: #FFFFFF !important;
      background-color: $primary-color !important;

      a, a:hover, a:focus,
      .fa, .fa:hover,
      span{
        color: #FFFFFF !important;
      }
      a:hover, a:focus{
        font-weight: bold;
      }

    }
  }
  .list-group-item:first-child{
    border: none;
  }
}



/* ----------------------------------------
-------------------------------------------
  SIDEBAR.
-------------------------------------------
---------------------------------------- */
.sidebar{
  // font-size: 10px;
  background: rgba(255,255,255, .5);
  
  .sidebar-details{
    padding: 0 20px;
    margin-left: 20px;
  }
  
  .fixed-title{
    & + .list-group{
      padding-bottom: 20px;
    }
  }
  
  .document-details {
    label {
      text-transform: uppercase;
      font-size: 80%;
      font-weight: normal;
      color: darken($default-color, 15%);
      margin: 0;
    }
    .form-control-static {
      min-height: 0;
      padding-top: 0;
      padding-bottom: 0;
      margin-bottom: 0;
    }
  }
  .sidebar-header-actions {
    line-height: 40px;
    margin-right: 10px;
  }

  .list-group-item{
    margin: 0px;
    padding: 0px;
    border: solid darken($border-color, 8%);
    border-width: 0 0 1px 0px;
    margin-bottom: 6px;
    
    &:hover .list-card{
      
      &.neutral,
      &.pending{
        background: $row-hover;
      }
    }
    
    .list-card {
      padding: 3px 6px;
      line-height: 6px;
      
      h4{
        padding-right: 40px;
      }
    }
    .corner-icon {
      position: absolute;
      top: 10px;
      right: 2px;
    }
    .meta-wrapper {
      text-transform: uppercase;
      font-size: 90%;
      .approved {
        border: none;
        color: $approved;
      }
      .pending {
        border: none;
        color: $pending;
      }
      .rejected {
        border: none;
        color: $rejected;
      }
      .neutral {
        border: none;
        color: $pending;
      }
    }
    .folder-name {
      color: darken($gray-color, 35%);
      font-size: 90%;
      line-height: 50%;
    }
    .approved {
      border-left: 3px solid $approved;
    }
    .pending {
      border-left: 3px solid $pending;
    }
    .rejected {
      border-left: 3px solid $rejected;
      background-color: lighten($rejected, 53%);
    }
    .neutral {
      border-left: 3px solid darken($gray-color, 20%);
    }
  }
  

  .form-horizontal{
    margin-top: 20px;

    &.static{
      .form-group{
        margin-bottom: 0;
      }
    }
    .form-group{
      clear: both;

      .form-control{
        height: 32px;
      }

      label{
        text-align: left;
        padding: 8px 0 0 10px;

        &.required:after{
          display: inline-block;
          content: ' *';
          color: $danger-color;
          padding-left: 2px;
          margin-right: -8px;
        }
      }

      input,
      textarea{
        font-size: 11px;
      }
    }
  }
}

textarea{
  resize: none;
}

@media(min-width: 768px){
  .sidebar-wrapper{
    position: fixed;
    top: 50px;
    right: 0;
    padding: 0;

    .sidebar{
      overflow-y: auto;
      padding: 60px 6px 6px 0;

      .fixed-title:first-child{
        position: absolute;
        top: 0;
        width: 100%;
        padding: 0 20px;
        background: #FFFFFF; // $light-gray;
        border: solid $border-color;
        border-width: 0 0 2px 1px;
        z-index: 1;
      }

      .list-group{
        padding-left: 6px;
        
        .list-group-item{
          // border: none;
          -webkit-border-radius: 0;
          -moz-border-radius: 0;
          border-radius: 0;

          &:hover{
            border-color: transparent;
            background-color: #FFFFFF;
          }
          &:nth-child(even),
          &:nth-child(even):hover{
            // background-color: $light-gray;
          }
        }
      }
    }
  }
}



/* ----------------------------------------
-------------------------------------------
  FILE UPLOAD DROPZONE.
-------------------------------------------
---------------------------------------- */
.dropzone{
  width: 100% !important;
  font-size: 20px;
  line-height: 1.6;
  text-align: center;
  padding: 20px 40px;
  margin-bottom: 10px;
  border: 2px dashed #999999;
  -webkit-border-radius: 14px;
  -moz-border-radius: 14px;
  border-radius: 14px;
}

@media(max-width:768px){
  .dropzone{
    font-size: 16px;
  }
}

.uploading-files{

  .btn-link[disabled]{
    color: darken($gray-color, 40%);
  }

  .upload-preview{
    max-height: 60px;
  }
}

.workflow-avatars {
  border-bottom: 1px solid darken($gray-color, 5%);
  
  .form-group {
    margin-bottom: 0px;
  }
  .avatar {
    border: 3px solid #eee;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    display: inline-block;
    overflow: hidden;
    margin: 5px 3px 5px 0;
    
    &.approved {
      border-color: $approved;
    }
    &.pending {
      border-color: $pending;
    }
    &.rejected {
      border-color: $rejected;
    }
    &.checked {
      border-color: $approved;
      background-color: $approved;
      color: #fff;
      text-align: center;
      line-height: 23px;
    }
    
    img {
      width: 100%;
      height: auto;
    }
  }

  .divider-vertical {
    height: 30px;
    border-left: 1px solid gray;
    opacity: 0.5;    
    margin: 5px 3px 5px 0;
    display: inline-block;
  } 
  
}

.fixed-title {
  h3{
    padding-top: 8px;
  }
  .fa {
    margin: 10px 5px;
  }
  .btn {
    margin: 5px;
  }
}

.fixed-title {
  h3{
    padding-top: 8px;
  }
  .fa {
    margin: 10px 5px;
  }
  .btn {
    margin: 5px;
  }
}


.preview-panel{
  display: block;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  color: #FFFFFF;
  text-align: center;
  background: rgba(0,0,0,.8);
  z-index: 999999;
  
  .preview-panel-toolbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 14px 20px 0;
    background: #000000;
  }
  
  img{
    max-width: 50%;
    display: inline-block;
    margin-top: 60px;
  }
}

